# bird-ui

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/Object/: AbstractBirdObject.h
src/models/: Interface.h  InterfaceTableModel.cpp  InterfaceTableModel.h  Route.h  RouteTableModel.cpp  RouteTableModel.h
src/service/: BirdConfigService.cpp  BirdConfigService.h  CommandService.cpp  CommandService.h  SshService.cpp  SshService.h
src/thread/: LoadInterfacesThread.cpp  LoadInterfacesThread.h
src/ui/: bgpPeerUI.ui
src/window/: BgpPeerWindow.cpp  BgpPeerWindow.h  InterfacesWindow.cpp  InterfacesWindow.h  MainWindow.h  RouteWindow.cpp  RouteWindow.h
